--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:image"
-      content="https://photos.app.goo.gl/iuSSmpZxN6PVwQGw9"
+      content="./og-image.png"
     />
     <meta property="og:title" content="Movies Browser" />
     <meta
