--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:image"
-      content="./og-image.png"
+      content="%PUBLIC_URL%/og-image.png"
     />
     <meta property="og:title" content="Movies Browser" />
     <meta
